--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -610,6 +610,50 @@ video {
   top: 1.75rem;
 }
 
+.top-\[100\%\] {
+  top: 100%;
+}
+
+.top-\[100vh\] {
+  top: 100vh;
+}
+
+.top-\[90vh\] {
+  top: 90vh;
+}
+
+.top-\[88vh\] {
+  top: 88vh;
+}
+
+.top-\[86vh\] {
+  top: 86vh;
+}
+
+.top-\[96vh\] {
+  top: 96vh;
+}
+
+.left-\[100\%\] {
+  left: 100%;
+}
+
+.left-\[100vw\] {
+  left: 100vw;
+}
+
+.left-\[80vw\] {
+  left: 80vw;
+}
+
+.left-\[-80vw\] {
+  left: -80vw;
+}
+
+.left-\[-100vw\] {
+  left: -100vw;
+}
+
 .-z-10 {
   z-index: -10;
 }
@@ -622,6 +666,10 @@ video {
   z-index: 10;
 }
 
+.m-2 {
+  margin: 0.5rem;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -630,6 +678,21 @@ video {
 .my-10 {
   margin-top: 2.5rem;
   margin-bottom: 2.5rem;
+}
+
+.mx-8 {
+  margin-left: 2rem;
+  margin-right: 2rem;
+}
+
+.mx-3 {
+  margin-left: 0.75rem;
+  margin-right: 0.75rem;
+}
+
+.my-2 {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 
 .mb-5 {
@@ -658,6 +721,34 @@ video {
 
 .mt-8 {
   margin-top: 2rem;
+}
+
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
+.ml-6 {
+  margin-left: 1.5rem;
+}
+
+.ml-8 {
+  margin-left: 2rem;
+}
+
+.mt-4 {
+  margin-top: 1rem;
+}
+
+.mt-10 {
+  margin-top: 2.5rem;
+}
+
+.mt-14 {
+  margin-top: 3.5rem;
+}
+
+.mt-16 {
+  margin-top: 4rem;
 }
 
 .block {
@@ -706,6 +797,50 @@ video {
 
 .h-full {
   height: 100%;
+}
+
+.h-1 {
+  height: 0.25rem;
+}
+
+.h-\[2px\] {
+  height: 2px;
+}
+
+.h-\[60vh\] {
+  height: 60vh;
+}
+
+.h-\[100vh\] {
+  height: 100vh;
+}
+
+.h-\[90vh\] {
+  height: 90vh;
+}
+
+.h-\[95vh\] {
+  height: 95vh;
+}
+
+.h-6 {
+  height: 1.5rem;
+}
+
+.h-\[80vh\] {
+  height: 80vh;
+}
+
+.h-\[80\%\] {
+  height: 80%;
+}
+
+.h-\[90\%\] {
+  height: 90%;
+}
+
+.h-\[92\%\] {
+  height: 92%;
 }
 
 .min-h-screen {
@@ -761,6 +896,18 @@ video {
   width: max-content;
 }
 
+.w-40 {
+  width: 10rem;
+}
+
+.w-\[200px\] {
+  width: 200px;
+}
+
+.w-\[100px\] {
+  width: 100px;
+}
+
 .min-w-full {
   min-width: 100%;
 }
@@ -775,6 +922,10 @@ video {
 
 .max-w-lg {
   max-width: 32rem;
+}
+
+.max-w-\[150px\] {
+  max-width: 150px;
 }
 
 .table-auto {
@@ -810,6 +961,16 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.cursor-pointer {
+  cursor: pointer;
+}
+
+.select-none {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+}
+
 .appearance-none {
   -webkit-appearance: none;
      -moz-appearance: none;
@@ -828,8 +989,16 @@ video {
   align-items: flex-start;
 }
 
+.items-end {
+  align-items: flex-end;
+}
+
 .items-center {
   align-items: center;
+}
+
+.justify-end {
+  justify-content: flex-end;
 }
 
 .justify-center {
@@ -854,6 +1023,10 @@ video {
 
 .gap-8 {
   gap: 2rem;
+}
+
+.gap-2 {
+  gap: 0.5rem;
 }
 
 .space-x-2 > :not([hidden]) ~ :not([hidden]) {
@@ -897,8 +1070,20 @@ video {
   overflow-y: auto;
 }
 
+.overflow-y-scroll {
+  overflow-y: scroll;
+}
+
+.text-ellipsis {
+  text-overflow: ellipsis;
+}
+
 .whitespace-nowrap {
   white-space: nowrap;
+}
+
+.text-nowrap {
+  text-wrap: nowrap;
 }
 
 .rounded {
@@ -1015,17 +1200,39 @@ video {
   background-color: rgb(202 138 4 / var(--tw-bg-opacity));
 }
 
-.bg-black\/80 {
-  background-color: rgb(0 0 0 / 0.8);
+.bg-red-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(153 27 27 / var(--tw-bg-opacity));
 }
 
-.bg-black\/60 {
-  background-color: rgb(0 0 0 / 0.6);
+.bg-emerald-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(5 150 105 / var(--tw-bg-opacity));
+}
+
+.bg-emerald-950 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(2 44 34 / var(--tw-bg-opacity));
+}
+
+.bg-purple-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(168 85 247 / var(--tw-bg-opacity));
+}
+
+.bg-emerald-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(16 185 129 / var(--tw-bg-opacity));
 }
 
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+.object-center {
+  -o-object-position: center;
+     object-position: center;
 }
 
 .p-10 {
@@ -1038,6 +1245,14 @@ video {
 
 .p-8 {
   padding: 2rem;
+}
+
+.p-2 {
+  padding: 0.5rem;
+}
+
+.p-4 {
+  padding: 1rem;
 }
 
 .px-0 {
@@ -1105,6 +1320,11 @@ video {
   padding-bottom: 1.5rem;
 }
 
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
 .pb-4 {
   padding-bottom: 1rem;
 }
@@ -1113,12 +1333,16 @@ video {
   padding-right: 4rem;
 }
 
-.pt-4 {
-  padding-top: 1rem;
-}
-
 .pt-6 {
   padding-top: 1.5rem;
+}
+
+.pt-2 {
+  padding-top: 0.5rem;
+}
+
+.pt-3 {
+  padding-top: 0.75rem;
 }
 
 .text-left {
@@ -1127,6 +1351,10 @@ video {
 
 .text-center {
   text-align: center;
+}
+
+.text-right {
+  text-align: right;
 }
 
 .font-mono {
@@ -1165,6 +1393,11 @@ video {
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
+}
+
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
 
 .font-bold {
@@ -1210,24 +1443,19 @@ video {
   color: rgb(59 130 246 / var(--tw-text-opacity));
 }
 
-.text-blue-600 {
-  --tw-text-opacity: 1;
-  color: rgb(37 99 235 / var(--tw-text-opacity));
-}
-
 .text-emerald-100 {
   --tw-text-opacity: 1;
   color: rgb(209 250 229 / var(--tw-text-opacity));
 }
 
+.text-emerald-400 {
+  --tw-text-opacity: 1;
+  color: rgb(52 211 153 / var(--tw-text-opacity));
+}
+
 .text-emerald-500 {
   --tw-text-opacity: 1;
   color: rgb(16 185 129 / var(--tw-text-opacity));
-}
-
-.text-emerald-600 {
-  --tw-text-opacity: 1;
-  color: rgb(5 150 105 / var(--tw-text-opacity));
 }
 
 .text-emerald-900 {
@@ -1274,9 +1502,29 @@ video {
   color: rgb(255 255 255 / 0.6);
 }
 
-.text-emerald-400 {
+.text-emerald-700 {
   --tw-text-opacity: 1;
-  color: rgb(52 211 153 / var(--tw-text-opacity));
+  color: rgb(4 120 87 / var(--tw-text-opacity));
+}
+
+.text-white\/50 {
+  color: rgb(255 255 255 / 0.5);
+}
+
+.text-white\/80 {
+  color: rgb(255 255 255 / 0.8);
+}
+
+.text-white\/70 {
+  color: rgb(255 255 255 / 0.7);
+}
+
+.underline {
+  text-decoration-line: underline;
+}
+
+.underline-offset-1 {
+  text-underline-offset: 1px;
 }
 
 .shadow {
@@ -1325,6 +1573,16 @@ video {
   transition-duration: 300ms;
 }
 
+.selection\:bg-black *::-moz-selection {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.selection\:bg-black *::selection {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
 .selection\:text-emerald-700 *::-moz-selection {
   --tw-text-opacity: 1;
   color: rgb(4 120 87 / var(--tw-text-opacity));
@@ -1333,6 +1591,16 @@ video {
 .selection\:text-emerald-700 *::selection {
   --tw-text-opacity: 1;
   color: rgb(4 120 87 / var(--tw-text-opacity));
+}
+
+.selection\:bg-black::-moz-selection {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.selection\:bg-black::selection {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
 .selection\:text-emerald-700::-moz-selection {
@@ -1422,11 +1690,6 @@ video {
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
-.focus\:ring-emerald-500:focus {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(16 185 129 / var(--tw-ring-opacity));
-}
-
 .focus\:ring-indigo-500:focus {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(99 102 241 / var(--tw-ring-opacity));
@@ -1489,9 +1752,261 @@ video {
   }
 }
 
+@media (max-width: 1260px) {
+  .max-\[1260px\]\:px-6 {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+}
+
 @media (max-width: 1150px) {
   .max-\[1150px\]\:hidden {
     display: none;
+  }
+}
+
+@media (max-width: 1000px) {
+  .max-\[1000px\]\:absolute {
+    position: absolute;
+  }
+
+  .max-\[1000px\]\:relative {
+    position: relative;
+  }
+
+  .max-\[1000px\]\:top-0 {
+    top: 0px;
+  }
+
+  .max-\[1000px\]\:top-60 {
+    top: 15rem;
+  }
+
+  .max-\[1000px\]\:z-10 {
+    z-index: 10;
+  }
+
+  .max-\[1000px\]\:z-50 {
+    z-index: 50;
+  }
+
+  .max-\[1000px\]\:block {
+    display: block;
+  }
+
+  .max-\[1000px\]\:flex {
+    display: flex;
+  }
+
+  .max-\[1000px\]\:hidden {
+    display: none;
+  }
+
+  .max-\[1000px\]\:h-fit {
+    height: -moz-fit-content;
+    height: fit-content;
+  }
+
+  .max-\[1000px\]\:w-full {
+    width: 100%;
+  }
+
+  .max-\[1000px\]\:flex-row {
+    flex-direction: row;
+  }
+
+  .max-\[1000px\]\:flex-col {
+    flex-direction: column;
+  }
+
+  .max-\[1000px\]\:items-center {
+    align-items: center;
+  }
+
+  .max-\[1000px\]\:justify-end {
+    justify-content: flex-end;
+  }
+
+  .max-\[1000px\]\:justify-center {
+    justify-content: center;
+  }
+
+  .max-\[1000px\]\:justify-between {
+    justify-content: space-between;
+  }
+
+  .max-\[1000px\]\:gap-4 {
+    gap: 1rem;
+  }
+
+  .max-\[1000px\]\:gap-2 {
+    gap: 0.5rem;
+  }
+
+  .max-\[1000px\]\:gap-3 {
+    gap: 0.75rem;
+  }
+
+  .max-\[1000px\]\:gap-6 {
+    gap: 1.5rem;
+  }
+
+  .max-\[1000px\]\:gap-10 {
+    gap: 2.5rem;
+  }
+
+  .max-\[1000px\]\:gap-12 {
+    gap: 3rem;
+  }
+
+  .max-\[1000px\]\:gap-14 {
+    gap: 3.5rem;
+  }
+
+  .max-\[1000px\]\:p-6 {
+    padding: 1.5rem;
+  }
+
+  .max-\[1000px\]\:text-right {
+    text-align: right;
+  }
+
+  .max-\[1000px\]\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
+  .max-\[1000px\]\:text-white {
+    --tw-text-opacity: 1;
+    color: rgb(255 255 255 / var(--tw-text-opacity));
+  }
+}
+
+@media (max-width: 750px) {
+  .max-\[750px\]\:hidden {
+    display: none;
+  }
+
+  .max-\[750px\]\:max-w-\[200px\] {
+    max-width: 200px;
+  }
+
+  .max-\[750px\]\:max-w-\[100px\] {
+    max-width: 100px;
+  }
+
+  .max-\[750px\]\:max-w-\[150px\] {
+    max-width: 150px;
+  }
+
+  .max-\[750px\]\:max-w-\[130px\] {
+    max-width: 130px;
+  }
+
+  .max-\[750px\]\:max-w-\[120px\] {
+    max-width: 120px;
+  }
+
+  .max-\[750px\]\:max-w-\[140px\] {
+    max-width: 140px;
+  }
+
+  .max-\[750px\]\:bg-red-500 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+  }
+}
+
+@media (max-width: 660px) {
+  .max-\[660px\]\:hidden {
+    display: none;
+  }
+
+  .max-\[660px\]\:p-3 {
+    padding: 0.75rem;
+  }
+
+  .max-\[660px\]\:px-2 {
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+  }
+
+  .max-\[660px\]\:px-3 {
+    padding-left: 0.75rem;
+    padding-right: 0.75rem;
+  }
+}
+
+@media (max-width: 560px) {
+  .max-\[560px\]\:block {
+    display: block;
+  }
+
+  .max-\[560px\]\:hidden {
+    display: none;
+  }
+
+  .max-\[560px\]\:w-full {
+    width: 100%;
+  }
+
+  .max-\[560px\]\:max-w-\[350px\] {
+    max-width: 350px;
+  }
+
+  .max-\[560px\]\:max-w-\[320px\] {
+    max-width: 320px;
+  }
+
+  .max-\[560px\]\:max-w-\[280px\] {
+    max-width: 280px;
+  }
+
+  .max-\[560px\]\:max-w-\[250px\] {
+    max-width: 250px;
+  }
+
+  .max-\[560px\]\:max-w-\[300px\] {
+    max-width: 300px;
+  }
+
+  .max-\[560px\]\:max-w-\[360px\] {
+    max-width: 360px;
+  }
+
+  .max-\[560px\]\:max-w-\[260px\] {
+    max-width: 260px;
+  }
+
+  .max-\[560px\]\:justify-between {
+    justify-content: space-between;
+  }
+
+  .max-\[560px\]\:gap-3 {
+    gap: 0.75rem;
+  }
+
+  .max-\[560px\]\:gap-2 {
+    gap: 0.5rem;
+  }
+
+  .max-\[560px\]\:gap-0 {
+    gap: 0px;
+  }
+
+  .max-\[560px\]\:bg-red-300 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(252 165 165 / var(--tw-bg-opacity));
+  }
+
+  .max-\[560px\]\:bg-red-500 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+  }
+
+  .max-\[560px\]\:py-4 {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
   }
 }
 
@@ -1504,6 +2019,34 @@ video {
 @media (max-width: 400px) {
   .max-\[400px\]\:w-80 {
     width: 20rem;
+  }
+}
+
+@media (max-width: 340px) {
+  .max-\[340px\]\:h-10 {
+    height: 2.5rem;
+  }
+
+  .max-\[340px\]\:w-10 {
+    width: 2.5rem;
+  }
+
+  .max-\[340px\]\:w-40 {
+    width: 10rem;
+  }
+
+  .max-\[340px\]\:max-w-\[150px\] {
+    max-width: 150px;
+  }
+
+  .max-\[340px\]\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+
+  .max-\[340px\]\:text-xs {
+    font-size: 0.75rem;
+    line-height: 1rem;
   }
 }
 
